--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,7 +413,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #1c7d32;
+  color: orange;
 }
 
 .about-me .content ul {
@@ -428,7 +428,7 @@ section .container {
 .about-me .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #1c7d32;
+  color: orange;
 }
 
 .about-me .content p:last-child {
