--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,6 +778,16 @@ section .container {
   margin-bottom: 30px;
 }
 
+.portfolio-img {
+  border-radius: 8px;
+}
+
+.portfolio-inside {
+  border-radius: 8px;
+  box-shadow: 3px 2px 0px 2px rgb(94, 61, 0);
+  background: rgba(94, 61, 0, 0.096);
+}
+
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 15px auto;
@@ -817,6 +827,7 @@ section .container {
   overflow: hidden;
   z-index: 1;
   background: rgba(0, 0, 0, 0.6);
+
 }
 
 .portfolio .portfolio-wrap::before {
