--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,8 @@ h6 {
 }
 
 #header h2 span {
-  color: #ffc107;
-  border-bottom: 2px solid #1c7d32;
+  color: #ffffff;
+  /* border-bottom: 2px solid #1c7d32; */
   padding-bottom: 6px;
 }
 
@@ -174,11 +174,11 @@ h6 {
 
 .profile-img {
   border-radius: 50%;
-  border-color: rgb(255, 165, 0);
+  border-color: #E5DBB1;
   border-width: 4px;
   border-style: solid;
   max-width: 250px;
-  box-shadow: 3px 2px 0px 2px rgb(94, 61, 0);
+  box-shadow: 2px 2px 0px 1px #5E5535;
 }
 
 .nav-menu a {
@@ -413,7 +413,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: orange;
+  color: #E5DBB1;
 }
 
 .about-me .content ul {
@@ -428,7 +428,7 @@ section .container {
 .about-me .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: orange;
+  color: #E5DBB1;
 }
 
 .about-me .content p:last-child {
@@ -517,10 +517,20 @@ section .container {
 .interests .icon-box {
   display: flex;
   align-items: center;
+  padding: 10px;
+  background: #E5DBB1;
+  box-shadow: 2px 2px 0px 1px rgb(94, 85, 53);
+  color: #010b16;
+  transition: ease-in-out 0.3s;
+}
+
+/* .interests .icon-box {
+  display: flex;
+  align-items: center;
   padding: 20px;
   background: #09203a;
   transition: ease-in-out 0.3s;
-}
+} */
 
 
 .interests .icon-box i {
@@ -535,7 +545,8 @@ section .container {
   padding: 0;
   line-height: 1;
   font-size: 16px;
-  color: #fff;
+  color: #252215;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.10);
 }
 
 .interests .icon-box:hover {
@@ -694,10 +705,10 @@ section .container {
 .services .icon-box {
   text-align: center;
   justify-content: center;
-  background: #09203a;
+  background: #E5DBB1;
   padding: 10px 10px;
   transition: all ease-in-out 0.3s;
-  box-shadow: 3px 2px 0px 2px rgb(94, 61, 0);
+  box-shadow: 3px 2px 0px 1px #5E5535;
   margin: 10px
 }
 
