--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1169,3 +1169,22 @@ section .container {
     transform: translateX(-50%);
   }
 }
+
+
+.skill-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  /* Space between items */
+}
+
+.skill-item .icons {
+  display: flex;
+  align-items: center;
+  /* Space between icons and text */
+}
+
+.skill-item .icons img {
+  margin-right: 5px;
+  /* Space between icons */
+}
