--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1188,3 +1188,17 @@ section .container {
   margin-right: 5px;
   /* Space between icons */
 }
+
+
+.data-links a {
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  line-height: 1;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
