--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1195,10 +1195,10 @@ section .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
+  background: #e5dbb175;
   color: #fff;
   line-height: 1;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
 }
